# Financial-data-history-fetcher-API

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  fetcher.yml  pyproject.toml
.github/workflows/: docker-image.yml
src/: main.py
src/modules/: kucoin_fetcher.py
src/services/: crypto_service.py  service.py
