[tool.poetry]
name = "financial-data-history-fetcher"
version = "0.1.0"
description = "Project aimed to fetch historical data for crypto, stock... No matter the timeframe."
authors = ["BaptisteZloch <bzloch@hotmail.fr>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.92.0"
pandas = "^1.5.3"
kucoin-python = "^1.0.11"
uvicorn = "^0.20.0"
apscheduler = "^3.10.0"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = 'src.main:start'